--- a/styles.css
+++ b/styles.css
@@ -408,7 +408,9 @@ footer {
     width: 50px;
 }
 
-@media screen and (max-width: 720px) {
+
+
+@media screen and (max-width: 768px){
     .container {
         display: flex;
         flex-direction: column;
@@ -497,7 +499,319 @@ footer {
         width: 80px;
         height: 80px;
         background: #292931;
+    } 
+    
+}
+
+@media screen and (max-width: 820px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 47px;
+        padding-top: 70px;
     }
+    .left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 600px;
+        padding: 20px;
+    }
+    h1 {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 60px;
+        color: #D9D9D9;
+    }
+    .line1{
+        text-align: center;
+    }
+    .line12 {
+        text-align: center;
+    }
+    .first-paragraph {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 60px;
+        color: #C7C7C7;
+        margin-top: 34px;
+        text-align: center;
+    }
+    .second-paragraph {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 35px;
+        color: #D9D9D9;
+        margin-top: 34px;
+        text-align: justify;
+    }
+    .icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .tooltip  {
+        width: 100px;
+        color: #D9D9D9;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+       
+    }
+    .line3 {
+        width:600px;
+        border-top: 2px solid #BE8600;
+        margin: 0 auto;
+        margin-top: 12em;
+    }
+    .box {
+        width: 600px;
+        height: 120px;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2em;
+    }
+    .box p {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 30px;
+        text-align: justify;
+        color: #C7C7C7;
     
+    }
+    .caixa {
+        border: 1px solid #BE8600;
+        width: 80px;
+        height: 80px;
+        background: #292931;
+    } 
+}
+
+@media screen and (max-width: 912px) {
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 47px;
+        padding-top: 70px;
+    }
+    .left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 600px;
+        padding: 20px;
+    }
+    h1 {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 60px;
+        color: #D9D9D9;
+    }
+    .line1{
+        text-align: center;
+    }
+    .line12 {
+        text-align: center;
+    }
+    .first-paragraph {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 60px;
+        color: #C7C7C7;
+        margin-top: 34px;
+        text-align: center;
+    }
+    .second-paragraph {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 35px;
+        color: #D9D9D9;
+        margin-top: 34px;
+        text-align: justify;
+    }
+    .icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .tooltip  {
+        width: 100px;
+        color: #D9D9D9;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+       
+    }
+    .line3 {
+        width:600px;
+        border-top: 2px solid #BE8600;
+        margin: 0 auto;
+        margin-top: 12em;
+    }
+    .box {
+        width: 600px;
+        height: 120px;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2em;
+    }
+    .box p {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 30px;
+        text-align: justify;
+        color: #C7C7C7;
     
+    }
+    .caixa {
+        border: 1px solid #BE8600;
+        width: 80px;
+        height: 80px;
+        background: #292931;
+    } 
+}
+
+@media screen and (max-width: 540px){
+    .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 47px;
+        padding-top: 70px;
+    }
+    .person-img {
+        margin-left: 13em;
+    }
+    .left {
+        display: flex;
+        text-align: center;
+        width: 100%;
+        margin-left: 13em;
+       
+    }
+    h1 {
+        font-weight: 700;
+        font-size: 30px;
+        line-height: 60px;
+        color: #D9D9D9;
+    }
+    .line1{
+        text-align: center;
+    }
+    .line2 {
+        text-align: center;
+    }
+    .first-paragraph {
+        font-weight: 600;
+        font-size: 30px;
+        line-height: 60px;
+        color: #C7C7C7;
+        margin-top: 34px;
+        text-align: center;
+    }
+    .second-paragraph {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 35px;
+        color: #D9D9D9;
+        margin-top: 34px;
+        text-align: justify;
+    }
+    .icons {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin-left: 13em;
+
+    }
+    .tooltip  {
+        width: 100px;
+        color: #D9D9D9;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+       
+    }
+    .line3 {
+        width:600px;
+        border-top: 2px solid #BE8600;
+        margin: 0 auto;
+        margin-top: 12em;
+        margin-left: 5em;
+    }
+    .line4 {
+        width:600px;
+        border-top: 2px solid #BE8600;
+        margin: 0 auto;
+        margin-top: 5em;
+        margin-left: 5em; 
+    }
+   
+    .box {
+        width: 600px;
+        height: 120px;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 2em;
+       
+    }
+    .box p {
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 30px;
+        text-align: justify;
+        color: #C7C7C7;
+    }
+  
+    .habilities {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        margin-left: 7em;
+    }
+    .caixa {
+        border: 1px solid #BE8600;
+        width: 80px;
+        height: 80px;
+        background: #292931;
+    }
+    .alinhamento {
+       margin-left: 15em;
+    }
+    .line4 h3 {
+        margin-right: 2em;
+    }
+    .contacts{
+        margin-left: 7em;
+        width: 100%;
+    }
+
+    footer {
+        border-top: 2px solid #BE8600;
+        margin-left: 7em;
+        width: 100%;
+
+    }
 }
